Update the Groovy plugin to 6.0.0-beta-1
for #1672